--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,10 +1,8 @@
 .form {
     width: 500px;
-    background:
-    radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent),
-    radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent) 50px 50px,
-    linear-gradient(#A8B1BB 8px, transparent 8px) 0 -4px,
-    linear-gradient(90deg, #A8B1BB 8px, transparent 8px) -4px 0;
-    background-color: slategray;
-    background-size:100px 100px, 100px 100px, 50px 50px, 50px 50px;
+    background-color: rgb(11 11 52 / 30%);
+  
+    
+    /* background-color: #502f8f;
+    background-image: linear-gradient(149deg, #657dd5 0%, #0a1b22 74%); */
 }   
